--- a/MaterialGoogle.user.styl
+++ b/MaterialGoogle.user.styl
@@ -659,7 +659,7 @@ pm #fff
                 filter: invert(0);
             }
         }
-        :root, [dark], .yt-lockup-metadata-view-model-wiz {
+        :root,html, [dark], .yt-lockup-metadata-view-model-wiz {
             --background-color: bg;
             --secondary-color: sec;
             --visited-color: vis;
@@ -723,6 +723,7 @@ pm #fff
             --yt-spec-text-disabled: var(--hence-color)!important;
             --ytd-searchbox-legacy-border-shadow-color: none !important;
             --yt-lightsource-section2-color: pm !important;
+            --yt-live-chat-banner-gradient-scrim: linear-gradient(var(--background-color),transparent);
         }
         ytd-macro-markers-list-item-renderer:hover, ytd-macro-markers-list-item-renderer{
             --ytd-macro-markers-list-item-background-color:  var(--button) !important;
